# gpumkat

./: CMakeLists.txt  LICENSE  README.md  gpumkat.h  install.sh  main.m
Example/: config.json  custom_thread_order.txt  simple_shader.metal
modules/debug/: debug.m  expose_from_debug.h  expose_to_debug.h  timeline_debug.m
modules/memory_tracker/: memory_tracker.h  memory_tracker.m
modules/pipeline_statistics/: pipeline_statistics.h  pipeline_statistics.m
modules/plugin_manager/: plugin.h  plugin_manager.h  plugin_manager.m
modules/update/: update.h  update.m
